frontend/src/components/CreateProject/CreateProject.scss
.create-project {
  display: flex;
  flex-direction: column;
  width: 100%;
  h1 {
    margin-bottom: 3rem;
  }
  .create-project-form {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 1rem;
    width: 100%;

    .create-project-form-item {
      width: 60%;

      label {
        font-size: 1.7rem;
      }

      input {
        font-size: 1.7rem;
        padding: 0.5rem 0;
      }

      textarea {
        font-size: 1.7rem;
        padding: 0.5rem 1rem;
      }

      .ant-select-selector {
        font-size: 1.7rem;
        padding: 0.5rem 1rem;

        .ant-select-selection-placeholder {
          padding: 0.5rem 1rem;
        }
      }

      .ql-toolbar {
        border-top-left-radius: 1rem;
        border-top-right-radius: 1rem;
      }
      .ql-container {
        border-bottom-left-radius: 1rem;
        border-bottom-right-radius: 1rem;
      }
      .ql-snow .ql-picker:not(.ql-color-picker):not(.ql-icon-picker) svg {
        right: unset;
      }
      .ql-editor {
        font-size: 2rem;
        font-family: inherit;
        text-align: right;

        ol,
        ul {
          padding: 0 1.5rem 0 0;

          li {
            padding: 0 1.5rem 0 0;

            &:nth-child(2) {
              margin-right: 1rem;
            }
          }
        }
      }
      .ql-font,
      .ql-align,
      .ql-list,
      .ql-code-block {
        display: none !important;
      }
    }

    .form-buttons {
      display: flex;
      justify-content: flex-end;
      gap: 1rem;

      button {
        font-size: 1.7rem;
        padding: 2rem 2.5rem;
      }
    }
  }
}

